# CityExpansionPrototype

./: Pasted-Exception-in-thread-Thread-34-handle-event-internal-Traceback-most-recent-call-last-File--1726678249766.txt  Pasted-Exception-in-thread-Thread-59-handle-event-internal-Traceback-most-recent-call-last-File--1726741289877.txt  Pasted-Traceback-most-recent-call-last-File-nix-store-f98g7xbckgqbkagdvpzc2r6lv3h1p9ki-python3-3-11-1726689965698.txt  Pasted-message-handler-error-Traceback-most-recent-call-last-File-home-runner-CityExpansionPrototy-1726688220169.txt  building.py  buildings.py  citizen.py  commands.py  config.json  events.py  main.py  notification.py  pyproject.toml  tasks.py
static/css/: style.css
static/data/: buildings.json
static/js/: buildings.js  game.js  grid.js  ui.js  websocket.js
templates/: index.html
