[tool.poetry]
name = "repl-nix-cityexpansionprototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-socketio = "^5.3.7"
faker = "^28.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
